crides api arreglades; sql modificat
