# public/api.yaml
@@ -346,18 +346,12 @@ paths:
           description: University doesn't exist
       security:
         - JWT: []
-  '/users/{user_id}/events':
+  '/events':
     get:
       tags:
         - event
       produces:
         - application/json
-      parameters:
-        - name: user_id
-          in: path
-          required: true
-          type: integer
-          minimum: 1
       responses:
         '200':
           description: List displayed correctly
@@ -430,7 +424,7 @@ paths:
           description: Error
       security:
         - JWT: []
-  '/events/{event_id}/event':
+  '/users/{user_id}/events':
     get:
       tags:
         - event
@@ -439,7 +433,7 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: event_id
+        - name: user_id
           in: path
           required: true
           type: integer
@@ -657,18 +651,13 @@ paths:
           description: Faculty doesn't exist
       security:
         - JWT: [] 
-  /users/{user_id}/events/{event_id}/comments: 
+  /events/{event_id}/comments:
     get:
       tags: 
         - comment
       produces:
         - application/json
       parameters:
-        - name: user_id
-          in: path
-          required: true
-          type: integer
-          minimum: 1
         - name: event_id
           in: path
           required: true
@@ -685,6 +674,7 @@ paths:
           description: Comments doesn't exist
       security:
         - JWT: []
+  /users/{user_id}/events/{event_id}/comments:
     post:
         tags:
           - comment
